--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"  href="bootstrap/css/bootstrap.css">
+    <title>Annisa Sholiha</title>
     <style>
+    body {
+    padding-top: 50px;
+    }
     </style>
   </head>
+
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -17,18 +22,26 @@
           </button>
           <a class="navbar-brand" href="#">Annisa Sholiha</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#about">Curriculum Vitae</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
-    <div>
-        <p>tes satu dua tiga</p>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          .col-md-8
+        </div>
+        <div class="col-md-4">
+          .col-md-4
+        </div>
+      </div>
     </div>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
