--- a/cv.html
+++ b/cv.html
@@ -28,11 +28,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Annisa Sholiha</a>
+          <a class="navbar-brand" href="http://annisasholiha.github.io/index.html">Annisa Sholiha</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">Curriculum Vitae</a></li>
+            <li><a href="http://annisasholiha.github.io/cv.html">Curriculum Vitae</a></li>
           </ul>
         </div>
       </div>
@@ -40,11 +40,11 @@
     <div class="container">
       <h1> Curriculum Vitae</h1>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2">
           <img class="thick-black-border" src="Gambar/UserPhoto.jpg">
         </img>
         </div>
-        <div class="col-md-8 bg-info">
+        <div class="col-md-10 bg-info">
           <h2>Data Pribadi</h2>
           <h4>Nama Lengkap          : Annisa Sholiha</h4>
           <h4>Tempat, Tanggal Lahir	: Jakarta, 12 Mei 1993</h4>
