--- a/cv.html
+++ b/cv.html
@@ -28,11 +28,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://annisasholiha.github.io/index.html">Annisa Sholiha</a>
+          <a class="navbar-brand" href="index.html">Annisa Sholiha</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://annisasholiha.github.io/cv.html">Curriculum Vitae</a></li>
+            <li><a href="cv.html">Curriculum Vitae</a></li>
           </ul>
         </div>
       </div>
