--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     body {
     padding-top: 50px;
     }
+
+    .thick-black-border {
+      border-color: black;
+      border-width: 5px;
+      border-style: solid;
+    }
+
+    bg-warning {
+      background-color: #fcf8e3;
+    }
     </style>
   </head>
 
@@ -20,29 +30,66 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Annisa Sholiha</a>
+          <a class="navbar-brand" href="index.html">Annisa Sholiha</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">Curriculum Vitae</a></li>
+            <li><a href="cv.html">Curriculum Vitae</a></li>
           </ul>
         </div>
       </div>
     </nav>
-
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
-          .col-md-8
-        </div>
         <div class="col-md-4">
-          .col-md-4
+          <img class="thick-black-border" src="Gambar/di tmii.jpg">
+          </img>
+        </div>
+        <div class="col-md-8 bg-warning">
+          <h3>Hallo!</h3>
+          <p>Nama saya Annisa Sholiha. Orang diluar biasa memanggilnya Annisa, Anis, Nisa atau Anshol.
+              Seorang mahasiswa Biologi semester 9 yang sedang menunggu waktu sidang setelah 9 bulan penelitian di BPPT, Serpong.
+            </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-9 bg-warning">
+          <h3>ISTJ...</h3>
+          <p>Beberapa kali tes MBTI selalu menunjukkan bahwa wanita ini memiliki kepribadian ISTJ
+              (Introvert, Sensing, Thinking, Judging). Memiliki kepekaan yang luar biasa dengan musik
+              dan bisa bernyanyi. Akan tetapi, sifat introvert telah membuatnya tidak terlalu suka menjadi
+              pusat perhatian.</p>
+         </div>
+         <div class="col-md-3">
+           <img class="thick-black-border" src="Gambar/di dufan.JPG">
+           </img>
+         </div>
+        <div class="row">
+          <div class="col-md-2">
+            <img class="thick-black-border" src="Gambar/UserPhoto.jpg">
+            </img>
+          </div>
+          <div class="col-md-10 bg-warning">
+            <h3><i>Woman with code</i></h3>
+            <p>Mendekati kelulusannya di Universitas Indonesia (UI), dia saat ini sedang belajar <i>skill</i>
+              baru yaitu <i>coding for </i> Front End Development. Dengan kata lain dia belajar untuk menjadi
+              programmer website. Saat ini sedang belajar <i>online</i> di <a href="http://freecodecamp.com">freecodecamp.com</a> dan dibawah bimbingan
+              Rizky Syaiful S.Kom a.k.a abang.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8 bg-warning">
+            <h3><i>Woman with</i> Toastmaster</h3>
+            <p>Toastmaster juga merupakan dunia yang digelutinya. Saat ini menjadi Vice President of Education (VPE) yang
+              belakang menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.</p>
+          </div>
+          <div class="col-md-4">
+            <img class="thick-black-border" src="Gambar/di toastmaster.jpg">
+            </img>
+          </div>
         </div>
       </div>
     </div>
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
   </body>
