--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
         </div>
         <div class="col-md-8 bg-warning">
           <h3>Hallo!</h3>
-          <p>Nama saya Annisa Sholiha. Orang diluar biasa memanggilnya Annisa, Anis, Nisa atau Anshol.
-              Seorang mahasiswa Biologi semester 9 yang sedang menunggu waktu sidang setelah 9 bulan penelitian di BPPT, Serpong.
+          <p>Namanya Annisa Sholiha. Ia biasa dipanggil Annisa, Anis, Nisa atau Anshol.
+              Seorang mahasiswi Biologi FMIPA UI semester 9 yang sedang menunggu waktu sidang setelah 9 bulan penelitian di BPPT, Serpong.
             </p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-9 bg-warning">
           <h3>ISTJ...</h3>
-          <p>Beberapa kali tes MBTI selalu menunjukkan bahwa wanita ini memiliki kepribadian ISTJ
-              (Introvert, Sensing, Thinking, Judging). Memiliki kepekaan yang luar biasa dengan musik
-              dan bisa bernyanyi. Akan tetapi, sifat introvert telah membuatnya tidak terlalu suka menjadi
-              pusat perhatian.</p>
+          <p>Beberapa kali tes MBTI selalu menunjukkan bahwa ia memiliki kepribadian ISTJ
+              (Introvert, Sensing, Thinking, Judging). Ia memiliki kepekaan yang luar biasa dengan musik
+              dan menurut orang, ia memiliki suara merdu. Namun, sifat <i>introvert</i>nya membuat dia tidak terlalu suka menjadi
+              pusat perhatian, sehingga ia jarang tampil di atas panggung.</p>
          </div>
          <div class="col-md-3">
            <img class="thick-black-border" src="Gambar/di dufan.JPG">
@@ -71,17 +71,17 @@
           </div>
           <div class="col-md-10 bg-warning">
             <h3><i>Woman with code</i></h3>
-            <p>Mendekati kelulusannya di Universitas Indonesia (UI), dia saat ini sedang belajar <i>skill</i>
-              baru yaitu <i>coding for </i> Front End Development. Dengan kata lain dia belajar untuk menjadi
-              programmer website. Saat ini sedang belajar <i>online</i> di <a href="http://freecodecamp.com">freecodecamp.com</a> dan dibawah bimbingan
-              Rizky Syaiful S.Kom a.k.a abang.</p>
+            <p>Mendekati kelulusannya di Universitas Indonesia (UI), saat ini dia belajar <i>skill</i>
+              baru yaitu <i>coding for </i> Front End Development. Dengan kata lain, dia belajar untuk menjadi
+              programmer website. Saat ini dia sedang belajar <i>online</i> di <a href="http://freecodecamp.com">freecodecamp.com</a> dan dibawah bimbingan
+              Rizky Syaiful S.Kom a.k.a Abang.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-8 bg-warning">
             <h3><i>Woman with</i> Toastmaster</h3>
             <p>Toastmaster juga merupakan dunia yang digelutinya. Saat ini menjadi Vice President of Education (VPE) yang
-              belakang menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.</p>
+              belakangan menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.</p>
           </div>
           <div class="col-md-4">
             <img class="thick-black-border" src="Gambar/di toastmaster.jpg">
