--- a/Anshol.html
+++ b/Anshol.html
@@ -1,36 +1,62 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"  href="bootstrap/css/bootstrap.css">
   <title>Annisa Sholiha</title>
   <style type="text/css">
-  body {
-    background-color: #8091A4;
-    padding: 10 px 10 px 10 px 10px;
-    margin-left: 10%;
-    margin-right: 10%;
-    font-family:sans-serif;
-    border:2px black;
+  .container1 {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #008080;
+  }
+  .navbar-brand {
+  color: #FFF;
+  }
+  .jumbotron {
+    background-color: #FFF;
+  }
+  .container {
+    background-color: #FF91A4;
+  }
+  .footer {
+    font-style: italic;
   }
   </style>
 </head>
 <body>
-  <header>
-  <h1 align="center">Annisa Sholiha<hr width="100%"></h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">About Us</a></li>
-    </ul>
+  <nav class="navbar navbar inverse navbar-fixed-top">
+    <div class="container1">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+      <a class="navbar-brand" href="#">Project name</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div>
+    </div>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+      </div>
+    </div>
   </nav>
-  <article>
-    <h1>Hallo!</h1>
-    <section>
-      <h1>Kalian pasti bingung kenapa ada disini???</h1>
-      <p>Kalian sedang berada di dunia anshol yang sedang belajar HTML dan CSS heheheh
-        Ini memang kesenangan baru gw saat ini. Inshaallah prospeknya bagus buat masa
-        depan</p>
-    </section>
-  </article>
-<body>
+  <footer>Ini hanya untuk latihan bootsrap</footer>
+</body>
 </html>
