--- a/Anshol.html
+++ b/Anshol.html
@@ -20,9 +20,6 @@
   .container {
     background-color: #FF91A4;
   }
-  .footer {
-    font-style: italic;
-  }
   </style>
 </head>
 <body>
@@ -35,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Tempat Bermain Anshol</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -57,6 +54,5 @@
       </div>
     </div>
   </nav>
-  <footer>Ini hanya untuk latihan bootsrap</footer>
 </body>
 </html>
