--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="cv.html">Curriculum Vitae</a></li>
+            <li><a href="Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
           </ul>
         </div>
       </div>
@@ -48,7 +49,8 @@
         <div class="col-md-8 bg-warning">
           <h3>Hallo!</h3>
           <p>Namanya Annisa Sholiha. Ia biasa dipanggil Annisa, Anis, Nisa atau Anshol.
-              Seorang mahasiswi Biologi FMIPA UI semester 9 yang sedang menunggu waktu sidang setelah 9 bulan penelitian di BPPT, Serpong.
+              Seorang mahasiswi Biologi FMIPA UI semester 9 yang sedang menunggu waktu
+              sidang setelah 9 bulan penelitian di BPPT, Serpong (Alhamdulillah udah lulus sekarang).
             </p>
         </div>
       </div>
