--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -130,7 +130,7 @@
           <p>Yup, kali ini gue menatap jalan yang sebelumnya gak pernah gue bayangkan.
             Dan sepertinya jalan itu yang akan gue tempuh. Jalan yang melenceng
             dari apa yang gue pelajari di kampus.</p>
-          <img src="Gambar/foto wisuda.jpg" height="300px" width="500px" class="img-thumbnail">
+          <img src="Gambar/Foto wisuda.jpg" height="300px" width="500px" class="img-thumbnail">
           <p class="bg-info">Tapi gue percaya bahwa tidak ada yang sia-sia dalam
             menuntut ilmu. Apapun itu ilmunya dan ilmu tersebut adalah ilmu yang
             membawa ke jalan kebaikan.</p>
