--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -107,7 +107,7 @@
             tingkat kesulitannya.</p>
           <p>Awalnya gue yang seumur hidup belum pernah coding (secara gue kuliah
             Biologi bukan Ilmu Komputer, Teknik Informatika atau Sistem Informasi)
-            gue cukup merasa kesulitan.</p>
+            cukup merasa kesulitan.</p>
           <p><i>Tetapi semua berubah ketika usaha gue untuk memelajari itu mulai
             mendapatkan hasil.</i></p>
           <p>Kode yang sudah gue susun sedemikian rupa, kemudian di running,
