--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -57,7 +57,7 @@
   </div>
   <div class="container2">
     <div class="blog-header">
-      <h1 class="blog-title">Mijn Woorden</h1>
+      <h1 class="blog-title"><i>Mijn Woorden</i></h1>
     </div>
     <div class="row">
       <div class="col-sm-8 blog-main">
