--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         <div class="row">
           <div class="col-md-8 bg-warning">
             <h3><i>Woman with</i> Toastmaster</h3>
-            <p>Toastmaster juga merupakan dunia yang digelutinya. Saat ini menjadi Vice President of Education (VPE) yang
-              belakangan menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.</p>
+            <p>Toastmaster juga merupakan dunia yang digelutinya. Sempat menjadi Vice President of Education (VPE) yang
+              belakangan menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.
+              Sekarang jadi member biasa dan sedang mencoba menjadi club mentor di Aviation Training Center (ATC) Toastmasters Club.</p>
           </div>
           <div class="col-md-4">
             <img class="thick-black-border" src="Gambar/di toastmaster.jpg">
