--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -22,8 +22,8 @@
   }
   .container2 {
     background-color: #FFF;
-    padding-right: 150px;
-    padding-left: 150px;
+    padding-right: 75px;
+    padding-left: 75px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -149,8 +149,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-        <div class="sidebar-module sidebar-module-inset">
+      <div class="col-sm-4 blog-sidebar">
+        <div class="sidebar-module sidebar-module-inset bg-warning">
           <h4>About</h4>
           <p>Seorang perempuan berusia 20an yang sedang mencari jalan hidupnya.</p>
         </div>
