--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -18,14 +18,15 @@
     background-color: #FFF;
   }
   .container {
-    background-color: #FF91A4;
-  }
-  .container2 {
     background-color: #FFF;
     padding-right: 75px;
     padding-left: 75px;
     margin-right: auto;
     margin-left: auto;
+  }
+  .container {
+    background-color: #FF91A4;
+  }
   }
   </style>
 </head>
