--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -16,17 +16,20 @@
   }
   .jumbotron {
     background-color: #FFF;
-  }
-  .container {
-    background-color: #FFF;
-    padding-right: 75px;
-    padding-left: 75px;
+    padding-right: 30px;
+    padding-left: 30px;
     margin-right: auto;
     margin-left: auto;
   }
-  .container {
-    background-color: #FF91A4;
+  .container2 {
+    background-color: #FF91A4
   }
+  .container {
+    background-color: #FFF;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
   }
   </style>
 </head>
@@ -47,7 +50,7 @@
     </div>
   </nav>
   <div class="jumbotron">
-    <div class="container">
+    <div class="container2">
       <h1>Hello, world!</h1>
       <p>Ini adalah proyek pribadi seorang Anshol yang sedang belajar menjadi seorang
       Front End Programmer. Laman ini juga sekaligus memuat tulisannya yang selama ini
@@ -56,7 +59,7 @@
       <p><a class="btn btn-primary btn-lg" href="https://annisasholiha.github.io" role="button">Learn more »</a></p>
     </div>
   </div>
-  <div class="container2">
+  <div class="container">
     <div class="blog-header">
       <h1 class="blog-title"><i>Mijn Woorden</i></h1>
     </div>
@@ -150,7 +153,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-4 blog-sidebar">
+      <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
         <div class="sidebar-module sidebar-module-inset bg-warning">
           <h4>About</h4>
           <p>Seorang perempuan berusia 20an yang sedang mencari jalan hidupnya.</p>
