fiksasi isi index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h3>Hallo!</h3>
           <p>Namanya Annisa Sholiha. Ia biasa dipanggil Annisa, Anis, Nisa atau Anshol.
               Seorang mahasiswi Biologi FMIPA UI semester 9 yang sedang menunggu waktu
-              sidang setelah 9 bulan penelitian di BPPT, Serpong (Alhamdulillah udah lulus sekarang).
+              sidang setelah 9 bulan penelitian di BPPT, Serpong (Alhamdulillah per Januari 2017 udah resmi lulus).
             </p>
         </div>
       </div>
@@ -60,7 +60,9 @@
           <p>Beberapa kali tes MBTI selalu menunjukkan bahwa ia memiliki kepribadian ISTJ
               (Introvert, Sensing, Thinking, Judging). Ia memiliki kepekaan yang luar biasa dengan musik
               dan menurut orang, ia memiliki suara merdu. Namun, sifat <i>introvert</i>nya membuat dia tidak terlalu suka menjadi
-              pusat perhatian, sehingga ia jarang tampil di atas panggung.</p>
+              pusat perhatian, sehingga ia jarang tampil di atas panggung.
+              <br>Punya hobi menulis cerita waktu kecil dulu. Entah sudah berapa cerpen yang ia tulis di buku tulisnya.
+            Biasanya bercerita tentang superhero (akibat sering dicekoki kartun minggu pagi waktu bocah).<br></p>
          </div>
          <div class="col-md-3">
            <img class="thick-black-border" src="Gambar/di dufan.JPG">
@@ -83,7 +85,7 @@
           <div class="col-md-8 bg-warning">
             <h3><i>Woman with</i> Toastmaster</h3>
             <p>Toastmaster juga merupakan dunia yang digelutinya. Sempat menjadi Vice President of Education (VPE) yang
-              belakangan menjadi <i>acting President</i> di Universitas Indonesia Toastmasters Club.
+              belakangan menjadi <i>President</i> di Universitas Indonesia Toastmasters Club.
               Sekarang jadi member biasa dan sedang mencoba menjadi club mentor di Aviation Training Center (ATC) Toastmasters Club.</p>
           </div>
           <div class="col-md-4">
