--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Annisa Sholiha</a>
+          <a class="navbar-brand" href="Anshol-Februari2017.html">Tempat Bermain Anshol</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -60,7 +61,7 @@
           <h4>2005-2006	: SDN Kunciran 6, Kota Tangerang</h4>
           <h4>2006-2009	: SMPN 3 Kota Tangerang</h4>
           <h4>2009-2012	: SMAN 2 Kota Tangerang</h4>
-          <h4>2012-Sekarang	: Jurusan Biologi, Fakultas Matematika & Ilmu Pengetahuan Alam (FMIPA), Universitas Indonesia (Program Sarjana Reguler)</h4>
+          <h4>2012-2017	: Jurusan Biologi, Fakultas Matematika & Ilmu Pengetahuan Alam (FMIPA), Universitas Indonesia (Program Sarjana Reguler)</h4>
           <h2> Riwayat Organisasi</h2>
           <h4>2007-2009	: Kelompok Paduan Suara SMPN 3 Kota Tangerang//Anggota</h4>
           <h4>2009-2011	  : Doeta Voice Club SMAN 2 Kota Tangerang//Anggota</h4>
@@ -74,7 +75,7 @@
             </ul>
           <h4>2013-2015	: Lembaga Pers FMIPA UI "Scientia"//Reporter</h4>
           <h4>2014-2015	: UI Toastmasters Club//Anggota</h4>
-          <h4>2015-Sekarang : UI Toastmasters Club//Vice President of Education (VPE)</h4>
+          <h4>2015-2016 : UI Toastmasters Club//Vice President of Education (VPE)</h4>
           <h2>Pengalaman Kerja</h2>
           <h3>Kerja Praktik</h3>
           <h4>Bagian Penelitian dan Pengembangan (Litbang) Rumah Sakit Kanker Dharmais (RSKD)</h4>
