--- a/cv.html
+++ b/cv.html
@@ -29,11 +29,11 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">Annisa Sholiha</a>
-          <a class="navbar-brand" href="Anshol-Februari2017.html">Tempat Bermain Anshol</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="cv.html">Curriculum Vitae</a></li>
+            <li><a href="Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
           </ul>
         </div>
       </div>
