tambah satu artikel

--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -144,6 +144,64 @@
           </blockqoute>
         </div>
         <div class="blog-post">
+          <h2 class="blog-post-title">Bicara Cinta di Bulan Cinta</h2>
+          <p class="blog-post-meta">February 16, 2017 by <a href="https://annisasholiha.github.io">Anshol</a></p>
+          <p>Mumpung masih di bulan Februari, bulan yang banyak orang bilang adalah
+             bulan cinta. Ijinkan gue untuk berbicara mengenai cinta.</p>
+          <p>Gue dulunya adalah orang yang suka mengutuki diri sendiri. Merasa memiliki
+            muka buruk rupa dan badan yang tidak proposional.</p>
+          <p>Dan satu lagi hal yang gue rasakan tentang diri gue dahulu...</p>
+          <p><i>Gue merasa diri gue tidak pernah dicintai karena gue belum punya pacar!</i></p>
+          <p>Pernah diwaktu sebelum tidur, gue berfikir mengapa gue gak punya pacar.
+            Mengapa sampai sekarang belum ada sekalipun lawan jenis yang “benar-benar”
+            mendekati gue. Setelah itu, munculah dugaan-dugaan seperti ini...</p>
+          <blockquote>
+            <p>“Apakah gara-gara sifat gue yang <i>straight-forward</i>?”</p>
+            <p>“Apakah gara-gara ketawa gue selalu keras?”</p>
+            <p>“Apakah gara-gara gue terlalu <i>Thinking</i> dibanding cewek-cewek pada
+              umumnya yang lebih mengedepankan <i>Feeling</i> dalam mengambil keputusan dan berperilaku?”</p>
+          </blockquote>
+          <p>Lalu apa yang terjadi setelah malam perenungan sebelum tidur itu?
+            Sampai sekarang tidak ada yang berubah. Semua berjalan seperti yang lalu.
+            Gue tetap sendiri.</p>
+          <p><i>Namun ada satu hal yang mengubah pikiran gue</i></p>
+          <p>Suatu ketika, gue yang abis mandi sedang berdiri di depan kaca. Menyisir
+            rambut yang basah.</p>
+          <p>Dan entah kenapa tiba-tiba senyum tersungging di wajah. Ada suatu perasaan
+            yang muncul.</p>
+          <blockquote>
+            <p>Gue merasa cantik sekali</p>
+          </blockquote>
+          <p>Di saat itu, gue tersadar kalau gue memiliki mata yang tajam, hidung
+             yang tidak terlalu pesek, muka yang tirus, badan yang tidak gemuk
+             (ini adalah penilaian gue terhadap diri gue, TITIK!). Gue juga bersyukur
+             bahwa gue selama ini sudah berusaha untuk mandiri dalam hidup, berusaha
+             untuk taat pada Allah SWT, punya keluarga yang utuh, teman-teman yang
+             baik, suara yang bisa dipakai untuk bernyanyi.... Masih banyak lagi
+             yang bisa disyukuri.</p>
+          <p>Yup, kepercayaan diri meningkat drastis ketika itu. Dan di saat itu
+            gue hanya ingin berkata...</p>
+          <blockquote>
+            <p>“How useless you are, the man who dump me”</p>
+          </blockquote>
+          <p><strong>Ini bukan untuk narsis...</strong></p>
+          <p>Gue hanya menyadari bahwa gue melupakan satu hal yang fundamental
+            dalam hidup.</p>
+          <p><i>Belajar mencintai dirimu terlebih dahulu sebelum kamu berharap
+            dicintai oleh orang-orang disekitarmu.</i></p>
+          <p>Gue sadar bahwa selama ini gue terlalu sering memandang rendah diri
+            sendiri. Akibatnya kepercayaan diri menjadi rendah. Padahal ada kelebihan
+            yang harusnya ditonjolkan. Akan tetapi kelebihan itu tertutupi dengan
+            kesedihan dan kekecewaan pada diri sendiri. Aura yang ditimbulkan juga
+            akan menjadi gelap dan suram. Tentu hal itu akan mengurangi daya tarik
+            bagi orang-orang di sekitar.</p>
+          <p><i>How pity I was....</i></p>
+          <p>Oleh karena itu, gue ingin bicara cinta kepada seseorang yang bernama
+            Annisa Sholiha.</p>
+          <br></br>
+          <p>P.S. Tulisan ini ntuk semua orang yang merasa dirinya <i>unsecure</i></p>
+        </div>
+        <div class="blog-post">
         <nav>
           <ul class="pager">
             <li><a href="#">Previous</a></li>
