--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -199,7 +199,7 @@
           <p>Oleh karena itu, gue ingin bicara cinta kepada seseorang yang bernama
             Annisa Sholiha.</p>
           <br></br>
-          <p>P.S. Tulisan ini ntuk semua orang yang merasa dirinya <i>unsecure</i></p>
+          <p>P.S. Tulisan ini untuk semua orang yang merasa dirinya <i>unsecure</i></p>
         </div>
         <div class="blog-post">
         <nav>
