--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="cv.html">Curriculum Vitae (CV)</a></li>
+            <li><a href="cv.html">Curriculum Vitae</a></li>
             <li><a href="Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
           </ul>
         </div>
