--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       margin-right: auto;
       margin-left: auto;
     }
+    .tulisan {
+      text-align: center;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
     .featurette-divider {
      padding-top: 50px;
      border: 3;
@@ -112,6 +117,7 @@
         </div>
     </div>
     <hr class="featurette-divider"><hr/>
+    <h2 class="tulisan"><i>Hobbies</i></h2>
     <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="Gambar/mic.jpg" alt="Generic placeholder image" width="140" height="140">
