--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     .tulisan {
       text-align: center;
       margin-top: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 50px;
+      font-size: 50px;
     }
     .featurette-divider {
      padding-top: 50px;
@@ -121,16 +122,16 @@
     <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="Gambar/mic.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2><i>Song Bird</i></h2>
+          <h3><i>Song Bird</i></h3>
         </div> 
         <div class="col-lg-4">
           <img class="img-circle" src="Gambar/ngetik.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Curhat <i>Writer</i></h2>
+          <h3>Curhat <i>Writer</i></h3>
         </div> 
         <div class="col-lg-4">
           <img class="img-circle" src="Gambar/notation.png" alt="Generic placeholder image" width="140" height="140">
-          <h2><i>Listener</i></h2>
-       </div> 
+          <h3><i>Listener</i></h3> 
+        </div> 
    </div>
 </div>   
 
