--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
       <h1> Curriculum Vitae</h1>
       <div class="row">
         <div class="col-md-2">
-          <img class="thick-black-border" src="Gambar/UserPhoto.jpg">
+          <img class="thick-black-border" src="Gambar/Annisa Sholiha.png" style="width: 100%;">
         </img>
         </div>
         <div class="col-md-10 bg-info">
@@ -70,8 +70,8 @@
           <h4>2012-2014	: Klub Musik VIVA FMIPA UI//Anggota</h4>
           <h4>2013-2014	: Kelompok Studi Mahasiswa (KSM) Eka Prasetya UI
             <ul>
-              <li>Staf Riset & Pengembangan Manusia (RPM) (2013)</li>
-              <li>Deputi Pengembangan Sumber Daya Manusia (PSDM) (2014)</li>
+              <li><h4>Staf Riset & Pengembangan Manusia (RPM) (2013)</h4></li>
+              <li><h4>Deputi Pengembangan Sumber Daya Manusia (PSDM) (2014)</h4></li>
             </ul>
           <h4>2013-2015	: Lembaga Pers FMIPA UI "Scientia"//Reporter</h4>
           <h4>2014-2015	: UI Toastmasters Club//Anggota</h4>
