--- a/index.html
+++ b/index.html
@@ -6,20 +6,42 @@
     <link rel="stylesheet"  href="bootstrap/css/bootstrap.css">
     <title>Annisa Sholiha</title>
     <style>
-    .bs-docs-masthead {
-      color: blueviolet;
-      text-align: center;
-      width: 1000px;
+      .navbar {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      border: 0px;
+      border-radius: 0;
+      margin-bottom: 0;
+      font-size: 12px;
+      letter-spacing: 5px;
+      background-color: #e6e6fa;
     }
-    .container1 {
-      width: 1000px;
-      padding-right: 15px;
-      padding-left: 15px;
-      margin-right: auto;
-      margin-left: auto;
+    body {
+    font-size: 45px;
+   }
+    .margin {
+    margin-bottom: 50px;
+    }
+    p {
+      font-size: 16px;
+    }
+    .bg-1 {
+    background-color: #f08080;
+    color: #fff;
+    }
+    .bg-2{
+      background-color: #2f2f2f;
+      color: #fff;
+    }
+    .container-fluid {
+    padding-top: 300px;
+    padding-bottom: 250px;
+    }
+     .container-fluid1 {
+    padding-top: 100px;
+    padding-bottom: 100px;
     }
     .tulisan {
-      text-align: center;
       margin-top: 20px;
       margin-bottom: 50px;
       font-size: 50px;
@@ -46,30 +68,27 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Annisa Sholiha</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="cv.html">Curriculum Vitae</a></li>
-            <li><a href="Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  <main class="bs-docs-masthead" id="content" tabindex="-1"> 
-    <div class="container1">   
-      <p class="lead">Welcome!</p>
+    <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="annisasholiha.github.io/index.html">Me</a>
     </div>
-  </main>    
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="annisasholiha.github.io/cv.html">Curriculum Vitae</a></li>
+        <li><a href="annisasholiha.giithub.io/Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <div class="container-fluid bg-1 text-left"
+    <h1 class="margin"><i>"Excuse The Rumors, Let Me Introduce Myself"</i></h1>
+  </div>  
   <div class="container marketing">
     <hr class="featurette-divider"><hr/>
     <div class="row featurette">
@@ -118,7 +137,7 @@
         </div>
     </div>
     <hr class="featurette-divider"><hr/>
-    <h2 class="tulisan"><i>Hobbies</i></h2>
+    <h2 class="tulisan text-center"><i>Hobbies</i></h2>
     <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="Gambar/mic.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -135,9 +154,8 @@
    </div>
 </div>   
 
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Be builded by Bootstrap, Visual Studio Code, and Love :)</p>
+    <footer class="container-fluid1 bg-2 text-center">
+        <p>Be builded by Bootstrap, Visual Studio Code, and Love :)</p>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
